integrates/back/deploy/dev/k8s/deployment.yaml
---
# SPDX-FileCopyrightText: 2022 Fluid Attacks <development@fluidattacks.com>
#
# SPDX-License-Identifier: MPL-2.0
apiVersion: apps/v1
kind: Deployment
metadata:
  name: integrates-${CI_COMMIT_REF_NAME}
  namespace: dev
spec:
  replicas: ${REPLICAS}
  selector:
    matchLabels:
      app: integrates-${CI_COMMIT_REF_NAME}
  template:
    metadata:
      labels:
        app: integrates-${CI_COMMIT_REF_NAME}
        # This ensures that the resource is updated on every apply
        uuid: ${UUID}
    spec:
      serviceAccountName: dev
      nodeSelector:
        worker_group: dev
      containers:
        - name: back
          image: ghcr.io/fluidattacks/makes:22.11
          imagePullPolicy: Always
          command: [sh]
          args:
            - -c
            - m gitlab:fluidattacks/universe@${CI_COMMIT_SHA} /integrates/back/deploy/probes/liveness;
              m gitlab:fluidattacks/universe@${CI_COMMIT_SHA} /integrates/back/deploy/probes/readiness;
              m gitlab:fluidattacks/universe@${CI_COMMIT_SHA} /integrates/back eph
          resources:
            requests:
              cpu: 600m
              memory: 2000Mi
            limits:
              cpu: 4000m
              memory: 5000Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
          ports:
            - containerPort: 8001
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - ~/.makes/out-integrates-back-deploy-probes-readiness/bin/* dev FluidIntegrates
                  http://localhost:8001
            initialDelaySeconds: 120
            periodSeconds: 60
            successThreshold: 1
            failureThreshold: 10
            timeoutSeconds: 60
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - ~/.makes/out-integrates-back-deploy-probes-liveness/bin/* dev FluidIntegrates
                  http://localhost:8001 https://${CI_COMMIT_REF_NAME}.app.fluidattacks.com
            initialDelaySeconds: 120
            periodSeconds: 60
            successThreshold: 1
            failureThreshold: 10
            timeoutSeconds: 60
        - name: db
          image: ghcr.io/fluidattacks/makes:22.11
          imagePullPolicy: Always
          command: [m]
          args:
            - gitlab:fluidattacks/universe@${CI_COMMIT_SHA}
            - ${DB_JOB}
          resources:
            requests:
              cpu: 600m
              memory: 2000Mi
            limits:
              cpu: 4000m
              memory: 3000Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
        - name: cache
          image: ghcr.io/fluidattacks/makes:22.11
          imagePullPolicy: Always
          command: [m]
          args:
            - gitlab:fluidattacks/universe@${CI_COMMIT_SHA}
            - /integrates/cache
          resources:
            requests:
              cpu: 600m
              memory: 2000Mi
            limits:
              cpu: 4000m
              memory: 3000Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
        - name: storage
          image: ghcr.io/fluidattacks/makes:22.11
          imagePullPolicy: Always
          command: [m]
          args:
            - gitlab:fluidattacks/universe@${CI_COMMIT_SHA}
            - /integrates/storage
          resources:
            requests:
              cpu: 600m
              memory: 2000Mi
            limits:
              cpu: 4000m
              memory: 3000Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
