integrates/back/deploy/dev/k8s/service.yaml
---
# SPDX-FileCopyrightText: 2022 Fluid Attacks <development@fluidattacks.com>
#
# SPDX-License-Identifier: MPL-2.0
apiVersion: v1
kind: Service
metadata:
  name: integrates-${CI_COMMIT_REF_NAME}
  namespace: development
spec:
  type: NodePort
  ports:
    - name: integrates
      port: 81
      targetPort: 8001
      protocol: TCP
  selector:
    app: integrates-${CI_COMMIT_REF_NAME}
